--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -1,8 +1,15 @@
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f9f9f9;
   margin: 0;
   padding: 0;
+  font-size: 1rem;
 }
 
 h1 {
@@ -11,40 +18,88 @@ h1 {
   color: #333;
 }
 
+#github-logo {
+  height: 20px;
+  vertical-align: text-bottom;
+  margin-right: 5px;
+}
+
+#github-link {
+  text-align: center;
+  margin-top: -10px;
+  margin-bottom: 0px;
+}
+
+a {
+  color: #0366d6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 #main-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   gap: 20px;
   padding: 20px;
-  flex-wrap: wrap; /* allows stacking on small screens */
+  flex-direction: row;
 }
 
 #map {
-  flex: 1;
-  min-width: 400px;
+  width: 50%;
+  max-width: 620px;
   height: 80vh;
-  max-height: 100vh;
-  border: 1px solid #ccc;
+  min-height: 600px;
 }
 
 #right-panel {
-  flex: 1;
-  min-width: 600px;
+  width: 50%;
+  max-width: 640px;
+}
+
+@media (max-width: 768px) {
+  #main-container {
+    flex-direction: column-reverse;  /* puts map below right panel */
+    align-items: center;
+  }
+  #map {
+    width: 100%;
+    height: 72vh;
+    min-height: 0;
+  }
+  #right-panel {
+    width: 100%;
+  }
+}
+
+#introduction {
+  max-width: 620px;
 }
 
 #location-form {
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 #coords {
   width: 250px;
 }
 
+#power-rating {
+  width: 250px;
+}
+
+#submit {
+  width: 80px;
+}
+
 #result {
-  margin-top: 20px;
-  font-size: 1.2em;
-  color: #006400;
+  font-size: 1rem;
+  color: #006400; /* green text */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -52,6 +107,9 @@ h1 {
 
 #result table {
   width: 100%;
-  border-collapse: collapse;
   text-align: left;
+}
+
+th {
+  vertical-align: bottom;
 }
