--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Solar Output Predictor</title>
+  <title>Solar Forecast UK</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       crossorigin=""></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <script src="{{ url_for('static', filename='script.js') }}" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Solar Panel Output Predictor</h1>
-
+  <h1>Solar Forecast UK</h1>
+  <p id="github-link">
+    <a href="https://github.com/DixonScott/solar-forecast" target="_blank" rel="noopener noreferrer">
+      <svg id="github-logo" viewbox="0 0 98 96" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405
+        46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184
+        -5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404
+        5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778
+        5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0
+        8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015
+        7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08
+        13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+              fill="#24292f"/></svg>View project on GitHub
+    </a>
+  </p>
   <div id="main-container">
     <div id="map"></div>
 
     <div id="right-panel">
-      <p>
+      <p id="introduction">
         This app predicts solar panel efficiency (in kWh/kW) for the next 7 days based on your chosen location.
         Predictions are based on the weather forecast from
         <a href="https://open-meteo.com/en/docs" target="_blank" rel="noopener noreferrer">Open-Meteo</a>
         and a model trained on UK solar panel data from
-        <a href="https://pvoutput.org" target="_blank" rel="noopener noreferrer">pvoutput.org</a>.
+        <a href="https://pvoutput.org" target="_blank" rel="noopener noreferrer">PVOutput</a>.
       </p>
       <p>
         Enter coordinates manually or click the map to choose a location.
-        Average efficiency prediction accuracy is 0.75kWh/kW.
+        The average efficiency prediction error is 0.75kWh/kW (assuming the weather forecast is correct).
+      </p>
+      <p>
+        Optional: enter the power rating (in kW) of your solar panel system to get predictions of energy output.
       </p>
       <form id="location-form">
-        <input type="text" id="coords" placeholder="Enter coordinates (lat, lon) or click map" />
-        <button type="submit">Predict</button>
-        <p>Optional: enter the power rating of your solar panel system to get predictions of energy output.</p>
-        <input type="number" id="power-rating" name="power-rating" min="0" step="any">
+        <input type="text" id="coords" placeholder="Enter coordinates (lat, lon) or click map"/>
+        <input type="number" id="power-rating" placeholder="Optional: enter power rating (kW)" name="power-rating" min="0" step="any">
+        <button type="submit" id="submit">Predict</button>
       </form>
 
       <div id="result"></div>
